# calculator-app

./: CLAUDE.md  Makefile  pyproject.toml
.claude/: settings.json
.claude/agents/: debugger.md  documenter.md  feature-builder.md  linter.md  orchestrator.md  pr-creator.md  reviewer.md  tester.md
.claude/commands/: debug.md  document.md  lint.md  new-module.md  pr.md  review.md  ship.md  test.md
src/calculator_app/: calculator.py  web.py
src/calculator_app/static/: index.html
tests/: test_calculator.py  test_web.py
