[project]
name = "calculator-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "ty",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["uv_build>=0.10.10,<0.12.0"]
build-backend = "uv_build"

# --- Ruff ---
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["calculator_app"]

# --- ty ---
[tool.ty.environment]
python-version = "3.11"

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
